--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -76,7 +76,7 @@ settings:
         # And try to login with an another IP Address?
         sessionExpireOnIpChange: false
     restrictions:
-        # Can unregistered players chat, care , that block all commands except followers
+        # Can unregistered/unlogged players chat and read chat, care , that block all commands except followers
         allowChat: false
         # Commands allowed when a player is unlogged
         allowCommands:
